# CAFA-6

./: .gitignore  CLI.txt  README.md  base_model_kfold_BP.ipynb  base_model_kfold_CC.ipynb  code.ipynb  goa-negative-propagation.ipynb  pyproject.toml  requirements.txt  setup_cafa6.ps1
U900/: Pipeline.ipynb  create-pytorch-env.sh  create-rapids-env.sh  matrix2submit.py  predict_parallel.py  refine.ipynb  run_all_models.py  run_ddp_gcn.py  standard.py
U900/nn_solution/: esm2sm.py  inference_models.py  t5.py  train_models.py  train_nn_fold.py
U900/parallel/: predict_parallel.py  run_all_models.py  run_all_models_fold.py  run_fold_models.py  run_gcn_parallel.py
U900/protlib/: metric.py
U900/protnn/: utils.py
U900/standard_data/: check_ia.py  get_tax_list.py  standard.py
configs/: base_model.yaml  base_model_kfold.yaml  data.yaml  seq_mlp_bce.yaml  seq_mlp_softf1.yaml
features/ppi/: netknn_top15_meta.json  ppi_features_meta.json
features/taxonomy/: species_vocab.json
features/taxonomy_highlevel/: metadata.txt  taxonomy_highlevel_vocab.json
features/top_terms_by_aspect/: top_terms_BP.npy  top_terms_CC.npy  top_terms_MF.npy
notebooks/: base_model.ipynb  base_model_CC.ipynb  base_model_MF.ipynb  base_model_kfold_MF.py  base_model_split.ipynb
notebooks/Hien/: base_model.py  base_model_BP.ipynb  base_model_kfold_BP.py  base_model_kfold_CC.py  base_model_kfold_MF.ipynb  blast-knn.ipynb  blend-goa-negative-propagation.ipynb
notebooks/Hung/: ASL_pos_weight_unit_test.ipynb  (+33 more)
report/: features.aux  features.fdb_latexmk  features.fls  features.out  features.tex
(+57 files in other folders)
