[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "LastDance"
version = "0.1.0"
description = "CAFA 6 Protein Function Prediction Project"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "your.email@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/nmhienbn/cafa-6"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
